src/kubernetes/docker-example-service.yaml
kind: Service
apiVersion: v1
metadata:
    name: docker-example
    namespace: default
    labels:
        k8s-app: docker-example
spec:
    ports:
        - protocol: TCP
          port: 8080
          targetPort: 8080
    selector:
        k8s-app: docker-example
    type: ClusterIP
