src/kubernetes/docker-example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: docker-example
    namespace: default
spec:
    rules:
        - host: kubernetes.docker.internal
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: docker-example
                            port:
                                number: 8080
    ingressClassName: nginx
